Update and rename index.md to index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body class="flex-row reset-gutter">
     <nav class="mobile-menu flex-row display-mobile">
         <i class="material-icons md-36 mobile-menu-icon" onclick="openNav()">menu</i>
-        <h1 class="main-header nav-header"><a href="/">HALCYON</a></h1>
+        <h1 class="main-header nav-header"><a href="/">NUMBER GO UP</a></h1>
     </nav>
 
     <nav class="flex-col navigation" id="navigation">
