--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 <a href=https://www.wowprogress.com/guild/us/stormrage/Number+Go+Up target="_blank" rel="noopener noreferrer"><span class="wowprogress">W</span></a>
             </li>
             <li>
-                <a href=https://raider.io/guilds/us/stormrage/Number%20Go%20Up target="_blank" rel="noopener noreferrer"><img class="icon" src="assets/media/icons/raiderio.png" alt="raiderio"></a>
+                <a href=https://raider.io/guilds/us/stormrage/Number%20Go%20Up target="_blank" rel="noopener noreferrer"><img class="icon" src="media/site icons/raiderio.png" alt="raiderio"></a>
             </li>
 
             <li>
-                <a href=https://www.warcraftlogs.com/guild/us/stormrage/number%20go%20up target="_blank" rel="noopener noreferrer"><img class="icon" src="assets/media/icons/warcraftlogs.png" alt="warcraftlogs"></a>
+                <a href=https://www.warcraftlogs.com/guild/us/stormrage/number%20go%20up target="_blank" rel="noopener noreferrer"><img class="icon" src="media/site icons/warcraftlogs.png" alt="warcraftlogs"></a>
             </li>
         </ul>
 
