--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
 
         <ul class="flex-row icons">
             <li class="wowprogress-bg">
-                <a href=https://www.wowprogress.com/guild/us/stormrage/Number+Go+Up target="_blank" rel="noopener noreferrer"><span class="wowprogress">W</span></a>
+                <a href=https://www.wowprogress.com/guild/us/stormrage/Number+Go+Up target="_blank" rel="noopener noreferrer"><img class="icon" src="media/site icons/wowprog.png" alt="wowprogress"></a>
+            </li>
             </li>
             <li>
                 <a href=https://raider.io/guilds/us/stormrage/Number%20Go%20Up target="_blank" rel="noopener noreferrer"><img class="icon" src="media/site icons/raiderio.png" alt="raiderio"></a>
             </li>
 
             <li>
-                <a href=https://www.warcraftlogs.com/guild/us/stormrage/number%20go%20up target="_blank" rel="noopener noreferrer"><img class="icon" src="media/site icons/warcraftlogs.png" alt="warcraftlogs"></a>
+                <a href=https://www.warcraftlogs.com/guild/us/stormrage/number%20go%20up target="_blank" rel="noopener noreferrer"><img class="icon" src="media/site icons/wlogs.png" alt="warcraftlogs"></a>
             </li>
         </ul>
 
