update apply link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </li>
         </ul>
 
-        <button onclick="" class="button">
+        <button onclick="window.open('forms.gle/pVF8HqTgzbvkHQsN6', '_blank')" class="button">
             <a class="apply" target="_blank" rel="noopener noreferrer">APPLY</a>
         </button>
 
@@ -71,8 +71,6 @@
             <p>As a note; Any and all strong players regardless of class/spec are encouraged to apply :)</p>
 
             <p>To be considered seriously at the moment we ask for 6/10m with Ny'alotha mythic progress recommended as we prep for next tier</p>
-          
-            <p> Google Form Application: forms.gle/pVF8HqTgzbvkHQsN6 </p>
           </div>
 
     </section>
