--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </li>
         </ul>
 
-        <button onclick="window.open('forms.gle/pVF8HqTgzbvkHQsN6', '_blank')" class="button">
+        <button onclick="window.open('https://forms.gle/pVF8HqTgzbvkHQsN6', '_blank')" class="button">
             <a class="apply" target="_blank" rel="noopener noreferrer">APPLY</a>
         </button>
 
