--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
     <title>Number Go Up</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="style/styles.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script type="text/javascript" src="../javascripts/kill-count.js"></script>
     <script src="javascripts/scale.fix.js"></script>
-    <script src="javascripts/kill-count.js"></script>
     <script src="javascripts/navigation.js"></script>
     <meta name="viewport" content="width=device-width">
 
