styles to style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Number Go Up</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="style/styles.css">
+    <link rel="stylesheet" href="style/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="javascripts/scale.fix.js"></script>
     <script src="javascripts/navigation.js"></script>
