--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
 
     <nav class="flex-col navigation" id="navigation">
         <header>
-            <h1 class="main-header nav-header display-desktop"><a href="/">NUMBER GO UP</a></h1>
-            <i class="material-icons md-36 mobile-menu-icon close-icon display-mobile" onclick="closeNav()">close</i>
-            
+            <h1 class="main-header nav-header display-desktop"><a href="/">NUMBER GO UP</a>
             <ul class="flex-row icons">
             <li class="wowprogress-bg">
                 <a href=https://www.wowprogress.com/guild/us/stormrage/Number+Go+Up target="_blank" rel="noopener noreferrer"><img class="icon" src="media/site icons/wowprog.png" alt="wowprogress"></a>
@@ -38,6 +36,9 @@
             <li>
                 <a href=https://www.warcraftlogs.com/guild/us/stormrage/number%20go%20up target="_blank" rel="noopener noreferrer"><img class="icon" src="media/site icons/wlogs.png" alt="warcraftlogs"></a>
             </li>
+            </h1>
+            <i class="material-icons md-36 mobile-menu-icon close-icon display-mobile" onclick="closeNav()">close</i>
+            
         </ul>
         </header>
 
