--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Number Go Up</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="style/style.css">
     <meta name="viewport" content="width=device-width">
 
 </head>
